--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
   url = ../../commaai/panda.git
 [submodule "opendbc"]
   path = opendbc_repo
-  url = ../../insertwittyusername/opendbc.git
+  url = https://github.com/insertwittyusername/opendbc.git
 [submodule "msgq"]
   path = msgq_repo
   url = ../../commaai/msgq.git
