--- a/.gitmodules
+++ b/.gitmodules
@@ -2,8 +2,8 @@
   path = panda
   url = ../../commaai/panda.git
 [submodule "opendbc"]
-  path = opendbc_repo
-  url = https://github.com/insertwittyusername/opendbc.git
+	path = opendbc
+	url = https://github.com/insertwittyusername/opendbc.git
 [submodule "msgq"]
   path = msgq_repo
   url = ../../commaai/msgq.git
